--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "mocha --require @babel/register"
+    "lint": "next lint"
   },
   "dependencies": {
     "@babel/preset-react": "^7.22.15",
